--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
     implementation 'com.google.mlkit:image-labeling-automl:16.2.1'
-    implementation 'com.google.mlkit:object-detection-custom:16.0.0'
+    implementation 'com.otaliastudios:cameraview:2.6.4'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    
 
 }
